--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,9 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
+$color-deep-sky-blue:               #00b2ff;
+$color-alice-blue:                  #f2f5f6;
+$color-black-pearl:                 #041827;
 
 // Gradient
 
@@ -22,11 +25,13 @@ $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0
 
 // переменная используемая в html для подключения скейлинга
 $fz-default:                        16px;
+$fz-mobile:                         14px;
 
 // у некоторых шрифтов в ios возникают проблемы с символом рубля
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
-
+$ff-main:                           "PT Mono", sans-serif;
+$ff-secondary:                      "Roboto Condensed", sans-serif;
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
 // Animation
