work on header. WIP

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,8 +18,11 @@
 // Blocks
 // ---------------------------------
 
-@import "blocks/btn";
-@import "blocks/modal";
+@import "blocks/main.scss";
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+// @import "blocks/btn";
+// @import "blocks/modal";
 
 // ---------------------------------
 
