--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,41 +4,75 @@
 
 .header__container {
   display: flex;
+  max-width: 1220px;
   align-items: center;
   justify-content: space-between;
+  padding: 22px 61px 34px 0;
+
+  @include vp-767 {
+    padding: 10px 35px 20px 26px;
+  }
+
+  @include vp-1023 {
+    padding: 15px 70px 30px 50px;
+  }
+
+  @include vp-1439 {
+    align-items: start;
+    padding: 22px 61px 34px 20px;
+  }
 }
 
 .header__list {
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 60px;
+  flex-wrap: wrap;
   list-style-type: none;
 
-  @media (max-width: $vp-1024) {
+  @include vp-767 {
+    padding-top: 0;
+  }
+
+  @include vp-1023 {
+    padding-top: 5px;
+  }
+
+  @include vp-1439 {
     gap: 20px;
   }
 }
 
-.header__item {
-  padding-top: 45px;
-  padding-bottom: 51px;
+.header__item:not(:last-of-type) {
+  margin-right: 121px;
+
+  @include vp-1439 {
+    margin-right: 0;
+  }
 }
 
 .header__link {
   position: relative;
-  padding-left: 35px;
-  padding-top: 45px;
-  padding-bottom: 51px;
+  display: block;
+  padding: 20px 0 20px 35px;
+  font: inherit;
   color: $color-alice-blue;
 
   &::before {
     position: absolute;
     content: "";
-    top: calc(50% - 13px);
+    top: calc(50% - 10px);
     left: 0;
     width: 20px;
     height: 20px;
+  }
+
+  @include vp-1023 {
+    padding: 20px;
+
+    &::before {
+      left: 10px;
+    }
   }
 }
 
@@ -52,20 +86,26 @@
 
 .header__button {
   display: block;
-  padding: 10px 15px 12px;
+  margin-left: auto;
+  align-self: center;
+  padding: 10px 16px 12px;
+  font-family: $ff-secondary;
   border: 1px solid $color-alice-blue;
   border-radius: 3px;
   text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
   line-height: 16px;
   color: $color-alice-blue;
+  letter-spacing: 0.05em;
 
-  @media (max-width: $vp-1024) {
+  @include vp-1023 {
     display: none;
   }
 }
 
 .header__text {
-  @media (max-width: $vp-1024) {
+  @include vp-1023 {
     display: none;
   }
 }
