--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -7,6 +7,11 @@
   }
 }
 
+.logo--footer {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
 .logo__icon {
   display: none;
 
@@ -21,4 +26,8 @@
   @include vp-767 {
     display: none;
   }
+}
+
+.logo__icon--footer {
+  display: block;
 }
