--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,8 +21,14 @@
 @import "blocks/main.scss";
 @import "blocks/header.scss";
 @import "blocks/logo.scss";
+@import "blocks/heading.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
+@import "blocks/navigation.scss";
+@import "blocks/contacts.scss";
+@import "blocks/accordion.scss";
 // @import "blocks/btn";
-// @import "blocks/modal";
+@import "blocks/modal";
 
 // ---------------------------------
 
