--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,9 @@ $color-torch-red:                   #ff1553;
 $color-deep-sky-blue:               #00b2ff;
 $color-alice-blue:                  #f2f5f7;
 $color-black-pearl:                 #041827;
+$color-accordion:                   #c4c4c4;
+$color-white-opacity:               rgba(255, 255, 255, 0.7);
+$color-border-footer-opacity:       rgba(248, 253, 255, 0.7);
 
 // Gradient
 
