--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -1,8 +1,7 @@
 .accordion {
   @include vp-767 {
     margin-bottom: 0;
-    padding: 21px 25px 15px;
-    border-top: 1px solid $color-border-footer-opacity;
+    padding: 21px 25px 22px;
     transition: $trans-default;
 
     &::after {
@@ -31,8 +30,7 @@
 
 .accordion--close {
   @include vp-767 {
-    padding: 21px 25px 22px;
-
+    border-bottom: 1px solid $color-border-footer-opacity;
     &::before {
       transform: rotate(0deg);
     }
@@ -41,14 +39,18 @@
 
 .accordion__list {
   @include vp-767 {
-    padding-bottom: 11px;
-    border-bottom: 1px solid $color-border-footer-opacity;
+    max-height: 500px;
+    overflow: hidden;
+    padding-bottom: 13px;
     transition: $trans-default;
+    border-bottom: 1px solid $color-border-footer-opacity;
   }
 }
 
 .accordion--close + .accordion__list {
   @include vp-767 {
-    display: none;
+    max-height: 0;
+    padding-bottom: 0;
+    border-bottom: none;
   }
 }
