--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,8 +3,13 @@
   color: $color-default-white;
 }
 
+.footer .accordion-close:last-of-type {
+  border-bottom: 1px solid tomato;
+}
+
 .footer__container {
   display: flex;
+  max-width: 1220px;
   padding: 49px 0 44px;
 
   @include vp-767 {
@@ -23,7 +28,7 @@
   }
 
   @include vp-1439 {
-    padding: 49px 0 44px;
+    padding: 49px 0 44px 25px;
   }
 }
 
@@ -37,6 +42,7 @@
 
 .footer__list--contacts {
   .footer__item {
+    line-height: 19px;
     margin-bottom: 5px;
   }
 
@@ -50,6 +56,7 @@
 .footer__list--contacts {
   @include vp-767 {
     .footer__item--tel {
+      line-height: 25px;
       margin-bottom: 3px;
     }
   }
@@ -73,10 +80,17 @@
   font-family: $ff-main;
   line-height: 22px;
   color: $color-white-opacity;
+  transition: $trans-default;
 
   @include vp-767 {
     line-height: 19px;
     font-size: $fz-mobile;
+  }
+}
+
+@media (hover: hover) {
+  .footer__link:hover {
+    color: $color-default-white;
   }
 }
 
@@ -95,11 +109,12 @@
 
   @include vp-767 {
     margin-right: 0;
-    margin-bottom: 29px;
+    padding-bottom: 29px;
     padding-right: 6px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-bottom: 1px solid $color-border-footer-opacity;
   }
 
   @include vp-1023 {
