--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -9,7 +9,11 @@
 
 .logo--footer {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
+
+  @include vp-767 {
+    margin-bottom: 10px;
+  }
 }
 
 .logo__icon {
