--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-  margin-right: 30px;
+  margin-right: 44px;
   overflow: hidden;
 
   @include vp-767 {
@@ -10,6 +10,8 @@
 .navigation__list {
   display: grid;
   grid-template-columns: repeat(2, 220px);
+  grid-template-rows: repeat(4, 1fr);
+  grid-auto-flow: column;
   gap: 8px 30px;
   max-height: 130px;
 
@@ -19,6 +21,8 @@
 
   @include vp-1023 {
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-auto-flow: row;
     max-height: 100%;
     padding-right: 50px;
   }
