--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
 $color-deep-sky-blue:               #00b2ff;
 $color-alice-blue:                  #f2f5f7;
+$color-alice-blue-social:           #f8fdff;
 $color-black-pearl:                 #041827;
 $color-accordion:                   #c4c4c4;
 $color-white-opacity:               rgba(255, 255, 255, 0.7);
