--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/header.scss";
 @import "blocks/logo.scss";
 @import "blocks/heading.scss";
+@import "blocks/main-block.scss";
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
 @import "blocks/navigation.scss";
