feat: complete Advantages, About and Services blocks

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,10 @@
 @import "blocks/logo.scss";
 @import "blocks/heading.scss";
 @import "blocks/main-block.scss";
+@import "blocks/advantages.scss";
+@import "blocks/card.scss";
+@import "blocks/about.scss";
+@import "blocks/services.scss";
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
 @import "blocks/navigation.scss";
