--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -1,4 +1,4 @@
-.accordion {
+.accordion__heading {
   @include vp-767 {
     margin-bottom: 0;
     padding: 21px 25px 22px;
@@ -28,7 +28,7 @@
   }
 }
 
-.accordion--close {
+.accordion__heading--close {
   @include vp-767 {
     border-bottom: 1px solid $color-border-footer-opacity;
     &::before {
@@ -47,7 +47,7 @@
   }
 }
 
-.accordion--close + .accordion__list {
+.accordion__heading--close + .accordion__list {
   @include vp-767 {
     max-height: 0;
     padding-bottom: 0;
