--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -3,7 +3,7 @@
   font-family: $ff-secondary;
   font-size: 36px;
   line-height: 51px;
-  text-transform: uppercase;
+  font-weight: 400;
 }
 
 .heading--footer {
@@ -13,7 +13,7 @@
   font-size: 15px;
   line-height: 16px;
   letter-spacing: 0.05em;
-  font-weight: 400;
+  text-transform: uppercase;
 
   @include vp-1023 {
     padding-top: 0;
@@ -25,5 +25,24 @@
     &::before {
       transform: rotate(0deg);
     }
+  }
+}
+
+.heading--showmobile {
+  display: none;
+
+  @include vp-767 {
+    display: block;
+    padding-right: 20px;
+    font-size: 28px;
+    line-height: 40px;
+  }
+}
+
+.heading--showtablet {
+  display: block;
+
+  @include vp-767 {
+    display: none;
   }
 }
