--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -1,30 +1,62 @@
 .main-block {
-  background: url('../../img/about-bg-desktop.jpg') no-repeat;
+  background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-desktop.jpg') no-repeat;
   background-size: cover;
 
   @include vp-1439 {
     @include retina {
-      background: url('../../img/about-bg-desktop.webp') no-repeat;
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-desktop@2x.jpg');
       background-size: cover;
     }
   }
 
   @include vp-1023 {
-    background: url('../../img/about-bg-tablet.jpg') no-repeat;
+    background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-tablet.jpg') no-repeat;
     background-size: cover;
 
     @include retina {
-      background: url('../../img/about-bg-tablet.webp') no-repeat;
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-tablet@2x.jpg') no-repeat;
       background-size: cover;
     }
   }
 
   @include vp-767 {
-    background: url('../../img/about-bg-mobile.jpg') no-repeat;
+    background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-mobile.jpg') no-repeat;
     background-size: cover;
 
     @include retina {
-      background: url('../../img/about-bg-mobile.webp') no-repeat;
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-mobile@2x.jpg') no-repeat;
+      background-size: cover;
+    }
+  }
+}
+
+.main-block {
+  background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-desktop.webp') no-repeat;
+  background-size: cover;
+
+  @include vp-1439 {
+    @include retina {
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-desktop@2x.webp') no-repeat;
+      background-size: cover;
+    }
+  }
+
+  @include vp-1023 {
+    background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-tablet.webp') no-repeat;
+    background-size: cover;
+
+    @include retina {
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-tablet@2x.webp') no-repeat;
+      background-size: cover;
+    }
+  }
+
+  @include vp-767 {
+    background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-mobile.webp') no-repeat;
+    background-size: cover;
+
+    @include retina {
+      background: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%), url('../../img/about-bg-mobile@2x.webp') no-repeat;
       background-size: cover;
     }
   }
@@ -34,28 +66,33 @@
   display: flex;
   max-width: 970px;
   margin-top: -120px;
+  margin-bottom: 120px;
   padding-top: 305px;
   padding-bottom: 280px;
   color: $color-alice-blue;
   flex-direction: column;
 
   @include vp-1439 {
+    margin-top: -120px;
+    margin-bottom: 120px;
     padding-top: 305px;
     padding-bottom: 280px;
   }
 
   @include vp-1023 {
-    margin-top: -120px;
+    margin-top: -119px;
+    margin-bottom: 80px;
     padding-top: 180px;
     padding-bottom: 205px;
   }
 
   @include vp-767 {
+    margin-bottom: 50px;
     padding: 150px 25px 190px;
   }
 }
 
-.main-block__container h1 {
+.main-block__container h2 {
   margin: 0;
   margin-bottom: 32px;
   text-transform: uppercase;
@@ -133,13 +170,13 @@
   }
 }
 
-.main-block--showtablet {
+.main-block__text--showtablet {
   @include vp-767 {
     display: none;
   }
 }
 
-.main-block--showmobile {
+.main-block__text--showmobile {
   display: none;
 
   @include vp-767 {
