--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $color-alice-blue:                  #f2f5f7;
 $color-alice-blue-social:           #f8fdff;
 $color-black-pearl:                 #041827;
 $color-accordion:                   #c4c4c4;
+$color-whisper:                     #ebebeb;
 $color-white-opacity:               rgba(255, 255, 255, 0.7);
 $color-border-footer-opacity:       rgba(248, 253, 255, 0.7);
 
