--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -1,7 +1,7 @@
 .accordion__heading {
   @include vp-767 {
     margin-bottom: 0;
-    padding: 21px 25px 22px;
+    padding: 21px 25px 17px;
     transition: $trans-default;
 
     &::after {
@@ -9,7 +9,7 @@
       content: "";
       width: 15px;
       height: 1px;
-      top: calc(50% - 3px);
+      top: 50%;
       right: 26px;
       background-color: $color-accordion;
     }
@@ -19,7 +19,7 @@
       content: "";
       width: 1px;
       height: 15px;
-      top: calc(50% - 9.5px);
+      top: 20px;
       right: 33px;
       background-color: $color-accordion;
       transform: rotate(90deg);
@@ -30,9 +30,15 @@
 
 .accordion__heading--close {
   @include vp-767 {
+    padding-bottom: 22px;
     border-bottom: 1px solid $color-border-footer-opacity;
+
     &::before {
       transform: rotate(0deg);
+    }
+
+    &::after {
+      top: 27px;
     }
   }
 }
