--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,10 +27,11 @@
 @import "blocks/card.scss";
 @import "blocks/about.scss";
 @import "blocks/services.scss";
+@import "blocks/feedback.scss";
+@import "blocks/form.scss";
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
 @import "blocks/navigation.scss";
-@import "blocks/contacts.scss";
 @import "blocks/accordion.scss";
 // @import "blocks/btn";
 @import "blocks/modal";
