--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -23,7 +23,7 @@
 
 .social__icon {
   fill: $color-alice-blue-social;
-  transition: $trans-default;
+  transition: fill $trans-default;
 }
 
 @media (hover: hover) {
