--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -3,23 +3,6 @@
   padding-bottom: 120px;
   padding-left: 250px;
 
-  &::before {
-    position: absolute;
-    content: "";
-    width: 150px;
-    height: 320px;
-    left: 0;
-    background: url("../../img/2022.png");
-    background-size: contain;
-  }
-
-  @include retina {
-    &::before {
-      background: url("../../img/2022@2x.png");
-      background-size: contain;
-    }
-  }
-
   @include vp-1439 {
     padding-bottom: 120px;
     padding-left: 250px;
@@ -43,16 +26,20 @@
   }
 }
 
-.about__container::before {
-  background: url("../../img/2022.webp");
+.about__image {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-  @include retina {
-    background: url("../../img/2022@2x.webp");
+  @include vp-767 {
+    display: none;
   }
 }
 
 .about h2 {
   margin-bottom: 14px;
+  color: $color-default-black;
 
   @include vp-767 {
     margin-bottom: 12px;
@@ -84,17 +71,14 @@
   max-width: 180px;
   margin-top: 42px;
   padding: 14px 13px 13px 12px;
-  font-family: $ff-secondary;
-  font-size: 14px;
-  line-height: 16px;
   letter-spacing: 0.05em;
-  font-weight: 700;
-  color: $color-deep-sky-blue;
   text-align: center;
   text-transform: uppercase;
   border: 1px solid $color-deep-sky-blue;
   border-radius: 3px;
   transition: $trans-default;
+
+  @include fonts($ff-secondary, 14px, 16px, 700, $color-deep-sky-blue);
 
   @include vp-1023 {
     margin-top: 22px;
@@ -121,7 +105,7 @@
   opacity: 0;
   max-height: 0;
   margin-bottom: 0;
-  transition: $trans-default;
+  transition: opacity, max-height, margin-bottom, $trans-default;
   z-index: -1;
 }
 
