--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -2,7 +2,7 @@
   @include vp-767 {
     margin-bottom: 0;
     padding: 21px 25px 17px;
-    transition: $trans-default;
+    transition: padding-bottom, border-bottom, $trans-default;
 
     &::after {
       position: absolute;
@@ -48,7 +48,7 @@
     max-height: 500px;
     overflow: hidden;
     padding-bottom: 13px;
-    transition: $trans-default;
+    transition: max-height, padding-bottom, border-bottom, $trans-default;
     border-bottom: 1px solid $color-border-footer-opacity;
   }
 }
