--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -5,7 +5,7 @@
   padding: 39px 40px 32px;
   border: 1px solid $color-whisper;
   border-left: 5px solid $color-deep-sky-blue;
-  transition: $trans-default;
+  transition: border-color, background-color, color, $trans-default;
   color: $color-black-pearl;
   cursor: pointer;
 
@@ -38,11 +38,8 @@
 .card h3 {
   margin: 0;
   margin-bottom: 15px;
-  font-family: $ff-secondary;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 400;
-  color: $color-deep-sky-blue;
+
+  @include fonts($ff-secondary, 24px, 34px, 400, $color-deep-sky-blue);
 
   @include vp-1023 {
     margin-bottom: 10px;
