--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -18,7 +18,7 @@
     display: grid;
     padding-top: 50px;
     padding-bottom: 65px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     gap: 11px 30px;
   }
 
@@ -71,7 +71,7 @@
   font-family: $ff-main;
   line-height: 22px;
   color: $color-white-opacity;
-  transition: $trans-default;
+  transition: color $trans-default;
 
   @include vp-767 {
     line-height: 19px;
