--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -1,9 +1,7 @@
 .heading {
   margin: 0;
-  font-family: $ff-secondary;
-  font-size: 36px;
-  line-height: 51px;
-  font-weight: 400;
+
+  @include fonts($ff-secondary, 36px, 51px, 400, $color-default-white);
 }
 
 .heading--footer {
@@ -16,6 +14,7 @@
   text-transform: uppercase;
 
   @include vp-1023 {
+    margin-bottom: 22px;
     padding-top: 0;
   }
 }
