--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -42,6 +42,14 @@
   }
 }
 
+@mixin fonts($font-family: $ff-main, $font-size: $fz-default, $line-height: 20px, $font-weight: 400, $color: $color-black-pearl) {
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
+  font-weight: $font-weight;
+  color: $color;
+}
+
 // Mobile first
 
 // @mixin vp-375 {
