--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -32,6 +32,11 @@
   top: 0;
   left: 0;
 
+  @include vp-1023 {
+    top: 6px;
+    left: 47px;
+  }
+
   @include vp-767 {
     display: none;
   }
