--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -32,6 +32,7 @@
 
   @include vp-767 {
     display: block;
+    margin-bottom: 28px;
     padding-right: 20px;
     font-size: 28px;
     line-height: 40px;
