fix: fixed mentor comments

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -44,7 +44,7 @@
 
 .about h2 {
   margin-bottom: 14px;
-  color: $color-default-black;
+  color: $color-black-pearl;
 
   @include vp-767 {
     margin-bottom: 12px;
