--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -95,11 +95,11 @@
 }
 
 .header__link--mail::before {
-  background: url("../../img/sprite/mail.svg") no-repeat;
+  background: url("../img/sprite/mail.svg") no-repeat;
 }
 
 .header__link--phone::before {
-  background: url("../../img/sprite/phone.svg") no-repeat;
+  background: url("../img/sprite/phone.svg") no-repeat;
 }
 
 .header__button {
