--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,8 +16,8 @@ $color-deep-sky-blue:               #00b2ff;
 $color-cerulean:                    #026693;
 $color-alice-blue:                  #f2f5f6;
 $color-alice-blue-social:           #f8fdff;
-$color-black-pearl:                 #041427;
-$color-black-pearl-submit:          #041827;
+$color-black-pearl:                 #041827;
+$color-black-pearl-submit:          #041427;
 $color-accordion:                   #c4c4c4;
 $color-whisper:                     #ebebeb;
 $color-white-opacity:               rgba(255, 255, 255, 0.7);
@@ -38,8 +38,8 @@ $fz-mobile:                         14px;
 // у некоторых шрифтов в ios возникают проблемы с символом рубля
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
-$ff-main:                           "PT Mono","Arial", serif;
-$ff-secondary:                      "Roboto Condensed", sans-serif;
+$ff-main:                           "PT Mono","Courier New", monospace;
+$ff-secondary:                      "Roboto Condensed","Arial", sans-serif;
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
 // Animation
