--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -83,6 +83,7 @@
   border: 1px solid $color-deep-sky-blue;
   border-radius: 3px;
   transition: $trans-default;
+  user-select: none;
 
   @include fonts($ff-secondary, 14px, 16px, 700, $color-deep-sky-blue);
 
@@ -118,7 +119,7 @@
 .about .about__text--show {
   opacity: 1;
   max-height: 200px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 @media (hover: hover) {
