--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -21,6 +21,7 @@
 
   @include vp-1023 {
     width: 100%;
+    justify-content: center;
     padding-top: 45px;
     padding-bottom: 125px;
   }
@@ -61,6 +62,7 @@
 }
 
 .feedback__image {
+  max-width: 100%;
   margin-top: 81px;
 
   @include vp-1023 {
@@ -73,6 +75,7 @@
 
   @include vp-1023 {
     width: 100%;
+    max-width: 670px;
     margin-right: 0;
   }
 }
