--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,12 +5,13 @@
   background: $black-pearl-to-bottom;
   z-index: 2;
 
-  @include vp-767 {
-    min-height: 70px;
-  }
-
   @include vp-1023 {
     min-height: 100px;
+    position: static;
+  }
+
+  @include vp-767 {
+    min-height: 70px;
   }
 }
 
@@ -37,9 +38,11 @@
 .header__list {
   display: flex;
   margin: 0;
+  margin-right: 164px;
   padding: 0;
   flex-wrap: wrap;
   list-style-type: none;
+  max-width: 510px;
 
   @include vp-767 {
     padding-top: 0;
@@ -47,6 +50,7 @@
 
   @include vp-1023 {
     padding-top: 5px;
+    margin-right: 0;
   }
 
   @include vp-1439 {
@@ -104,7 +108,7 @@
 
 .header__button {
   display: block;
-  margin-left: auto;
+  max-width: 160px;
   align-self: center;
   padding: 10px 16px 12px;
   font-family: $ff-secondary;
