--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -5,11 +5,16 @@
 .main-block__background {
   position: absolute;
   object-fit: cover;
+  width: 100%;
   height: 880px;
   top: 0;
   left: 0;
   z-index: -1;
   background: $color-cerulean;
+
+  @include vp-1919 {
+    width: 100%;
+  }
 
   @include vp-1023 {
     height: 640px;
@@ -33,20 +38,21 @@
   flex-direction: column;
 
   @include vp-1439 {
-    margin-top: -120px;
+    margin-top: -220px;
     margin-bottom: 120px;
     padding-top: 305px;
     padding-bottom: 280px;
   }
 
   @include vp-1023 {
-    margin-top: -119px;
+    margin-top: -219px;
     margin-bottom: 80px;
     padding-top: 180px;
     padding-bottom: 205px;
   }
 
   @include vp-767 {
+    margin-top: -189px;
     margin-bottom: 50px;
     padding: 150px 25px 190px;
   }
@@ -103,6 +109,7 @@
   text-transform: uppercase;
   border-radius: 3px;
   transition: background-color $trans-default;
+  user-select: none;
 
   @include fonts($ff-secondary, 18px, 21px, 700, $color-alice-blue);
 
