--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -46,7 +46,7 @@
   padding: 0;
   list-style-type: none;
   gap: 85px;
-  justify-content: center;
+  flex-wrap: wrap;
 
   @include vp-1023 {
     flex-direction: column;
@@ -54,11 +54,17 @@
   }
 }
 
+.services__item {
+  flex: 1 1 0;
+}
+
 .services__link {
   position: relative;
   display: block;
-  padding: 47px 40px 543px;
-  min-width: 350px;
+  max-width: 650px;
+  width: 100%;
+  min-height: 650px;
+  padding: 47px 40px 47px;
   transition: outline $trans-default;
   z-index: 0;
   overflow: hidden;
@@ -69,13 +75,15 @@
 
   @include vp-1023 {
     margin: 0 auto;
+    min-height: 250px;
     max-width: 670px;
-    padding: 37px 45px 153px;
+    padding: 37px 45px 37px;
   }
 
   @include vp-767 {
+    max-width: 607px;
     width: 100%;
-    padding: 26px 30px 164px;
+    padding: 26px 30px 26px;
   }
 }
 
@@ -123,22 +131,6 @@
       top: -537px;
     }
   }
-
-  & br {
-    display: none;
-
-    @include vp-1439 {
-      display: block;
-    }
-  }
-
-  & .services__subheading {
-    padding-right: 80px;
-
-    @include vp-1439 {
-      padding-right: 0;
-    }
-  }
 }
 
 .services__item:nth-child(3n) .services__image {
@@ -157,14 +149,17 @@
 }
 
 .services__subheading {
+  max-width: 170px;
   margin: 0;
-  font-family: $ff-secondary;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 400;
-  color: $color-default-white;
+
+  @include fonts($ff-secondary, 20px, 30px, 400, $color-default-white);
+
+  @include vp-1023 {
+    max-width: 150px;
+  }
 
   @include vp-767 {
+    max-width: 135px;
     font-size: 18px;
     line-height: 30px;
   }
