--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,11 +1,14 @@
 .social__list {
   display: flex;
-  padding-left: 5px;
+  padding-left: 10px;
   align-items: center;
+  flex-wrap: wrap;
   gap: 15px;
 
-  @include vp-767 {
+  @include vp-1023 {
+    padding-top: 5px;
     padding-left: 0;
+    margin-right: -5px;
   }
 }
 
@@ -16,9 +19,11 @@
 }
 
 .social__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 40px;
   height: 40px;
-  padding: 5px;
 }
 
 .social__icon {
