--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -10,6 +10,12 @@
     padding-left: 0;
     margin-right: -5px;
   }
+
+  @include vp-767 {
+    padding-top: 5px;
+    padding-left: 10px;
+    margin-right: 0;
+  }
 }
 
 .social__item {
