--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -53,7 +53,7 @@
   }
 }
 
-.accordion__heading--close + .accordion__list {
+.accordion__heading--close ~ .accordion__list {
   @include vp-767 {
     max-height: 0;
     padding-bottom: 0;
