--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,29 +1,33 @@
 .navigation {
-  margin-right: 28px;
+  margin-right: 127px;
   overflow: hidden;
+
+  @include vp-1023 {
+    margin-right: 0;
+  }
 
   @include vp-767 {
     margin-right: 0;
   }
 }
 
+.navigation__lists {
+  display: flex;
+  gap: 41px;
+
+  @include vp-1023 {
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
 .navigation__list {
-  display: grid;
-  max-width: 530px;
-  grid-template-columns: minmax(min-content, 220px) minmax(min-content, 220px);
-  grid-template-rows: repeat(4, min-content);
-  grid-auto-flow: column;
-  gap: 8px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 220px;
 
   @include vp-767 {
     padding-right: 0;
-  }
-
-  @include vp-1023 {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-auto-flow: row;
-    max-height: 100%;
-    padding-right: 50px;
   }
 }
