--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -108,7 +108,7 @@
 
 .header__button {
   display: block;
-  max-width: 160px;
+  min-width: 160px;
   align-self: center;
   padding: 10px 16px 12px;
   font-family: $ff-secondary;
