--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -41,14 +41,16 @@
 }
 
 .services__list {
-  display: flex;
+  display: grid;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  grid-template-columns: repeat(3, minmax(200px, 350px));
   gap: 85px;
   flex-wrap: wrap;
 
   @include vp-1023 {
+    display: flex;
     flex-direction: column;
     gap: 30px;
   }
