--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -3,6 +3,10 @@
   align-self: flex-start;
   margin-right: 46px;
 
+  @include vp-1023 {
+    margin-top: 5px;
+  }
+
   @include vp-767 {
     margin-right: 0;
   }
